--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
       password has to be typed interactively.
     </td>
   </tr>
+  <tr>
+    <td class='code'>todo</td>
+    <td>
+      Grep for the <a class='code'>TODO</a> text in the source files.
+    </td>
+  </tr>
   </table>
   
   <p>
