Keeping the old makefile during an update is now optional

--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
   </tr>
   <tr>
     <td class='code'>update</td>
-    <td>get the latest version of this makefile. Internet connection required.</td>
+    <td>
+      get the latest version of this makefile. Internet connection required.
+      Unless REMOVE_OLD_LATEX_MAKEFILE is defined, it keeps the old version of
+      this makefile as Makefile.old.
+    </td>
   </tr>
   <tr>
     <td class='code'>zip</td>
