Adding target-specific help messages

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
     <td>display usage</td>
   </tr>
   <tr>
+    <td class='code'>make help_[target]</td>
+    <td>display usage of the specified target</td>
+  </tr>
+  <tr>
     <td class='code'>make show</td>
     <td>
       compile everything and show them<br />
@@ -138,7 +142,7 @@
   <tr>
     <td class='code'>todo</td>
     <td>
-      Grep for the <a class='code'>TODO</a> text in the source files.
+      grep for the <a class='code'>TODO</a> text in the source files.
     </td>
   </tr>
   </table>
