Add target to list targets

--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
       grep for the <a class='code'>TODO</a> text in the source files.
     </td>
   </tr>
+  <tr>
+    <td class='code'>targets</td>
+    <td>list accepted <a class='code'>make</a> targets</td>
+  </tr>
   </table>
   
   <p>
